<resources>
    <string name="app_name">LXJ_Util</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <item name="tag_first" type="id"></item>
    <item name="tag_second" type="id"></item>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_sql">数据库</string>
    <string name="main_album">相册</string>
    <string name="main_camera">相机</string>
    <string name="take_picture">拍照</string>
    <string name="main_anim">动画</string>
    <string name="test_branch">test分支</string>
    <string name="title_activity_translate">TranslateActivity</string>


</resources>
