<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.util.luxj.MainActivity">

    <Button
        android:id="@+id/btn_into_sql"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_sql" />

    <Button
        android:id="@+id/btn_into_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_album" />

    <Button
        android:id="@+id/btn_into_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_camera" />

    <Button
        android:id="@+id/btn_into_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_anim" />
    <Button
        android:id="@+id/btn_into_branch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_branch" />
</LinearLayout>
